<resources>
    <string name="app_name">Calculator Assessment</string>
    <string name="subtract">-</string>
    <string name="addition">+</string>
    <string name="modulus">*</string>
    <string name="division">/</string>
    <string name="output">Output</string>
    <string name="enter_another_number">Enter Another Number</string>
    <string name="enter_a_number">Enter a Number</string>
</resources>